  - Transitions: Added CurtainTransition, FlipX3DTransition, FlipY3DTransition,
     FlipAngular3DTransition, TurnOffTilesTransition, RotoZoomTransition, JumpZoomTransition
     EnvelopeTransition
  - Scenes: Added the cocos/scenes directory. Pause and transitions are there
  - Layer: splitted in 3 files inside the cocos/layer directory
  - Layer: added the PythonInterpreterLayer()
  - Menu: Added MultipleMenuItem, an item that supports multiple possible
    values. Contributed by Alejandro Weil (tenuki)
  - Menu: Added EntryMenuItem, based on patch by David Eyk    
  - Menu: changed API. instead of 'add() and build_items()' use 'create_menu()'
  - actions are defined in the actions/ folder
  - ActionSprite and SpriteGroup added in sprite.py
  - Added DefaultHandler:
     ESCAPE: director.pop
     MOD_ACCEL + f: Toggles Fullscreen
     MOD_ACCEL + p: Toggles Pause
     MOD_ACCEL + w: Toggles wireframe mode
     MOD_ACCEL + s: Takes a screenshot of the current window
     MOD_ACCEL + x: Toggles FPS
     MOD_ACCEL + i: Toggles the python interpreter
  - alpha blending enabled by default. 
    use director.set_alpha_bleding(True|False) to change.
  - Actions: Goto renamed to MoveTo and Move renamed to MoveBy
     Scale renamed to ScaleBy. Added ScaleTo
     Rotate renamed to RotateBy. Added RotateTo
  - Actions: Jump renamted to JumpBy. Added JumpTo.
    Changed the JumpBy/To API. JumpBy( (x,y), height, number_of_jumps, duration)
  - Actions: Added IntervalAction decorators:
     Accelerate, AccelDeccel
  - Actions:Added a new base class: InstantAction 
  - Added compositions and actions to scenes and layers
  - Added setup.py and setup.cfg contributed by David Eyk
  - Actions: Added Mesh effects:
     Liquid, Sin Shaky, ShakyTiles, ShuffleTiles, QuadMoveBy
     MoveCornerUp, MoveCornerDown, SkewVertical, SkewHorizontal
     FlipX, FlipY, Flip, CornerSwap, ShatteredTiles,
     FadeOutTiles, Waves3D, FlipX3D, FlipY3D, Lens3D, CameraOrbit